client/styles.css
body {
  background: url("./resources/bamboo-watercolor2.png") no-repeat center center fixed;
  background-size: cover;
  color: black;
  font-family:'P22 TaiChi W00 Regular';
}

/****** Logo Styles ******/
.logo {
  text-align: right;
  font-size: 4em;
  /*font-family:'Japanese Brush Master W00 Rg';*/
}

/****** App Styles ******/
.app {
  max-width: 500px;
  margin: 0 auto;
}

.controls {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

h1, p {
  margin: 0;
}

/****** Button Styles ******/
.button {
  display: inline-block;
  border-radius: .5em;
  padding: 1em;
  -webkit-transition: background-color .25s; /* Safari */
  transition: background-color .25s;
  background-color: transparent;
  vertical-align: middle;
}

.buttonIncrement,
.buttonDecrement,
.buttonRemoveTimer,
.buttonAddTimer,
.buttonStart,
.buttonPause,
.buttonReset {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: 0px;
  color: transparent;
}

.buttonDecrement:hover,
.buttonIncrement:hover,
.buttonRemoveTimer:hover,
.buttonAddTimer:hover,
.buttonStart:hover,
.buttonPause:hover,
.buttonReset:hover {
  transition: color .25s;
  color: white;
}

.buttonIncrement {
  background-image: url('../resources/singleKoiUpWhite.png');
}
.buttonIncrement:hover {
  background-image: url('../resources/singleKoiUpBlack.png');
  transition: background-image .25s;
}
.buttonDecrement {
  background-image: url('../resources/singleKoiDownWhite.png');
}
.buttonDecrement:hover {
  background-image: url('../resources/singleKoiDownBlack.png');
  transition: background-image .25s;
}

.button:hover {
  background-color: rgba(100, 100, 100, .6);
  -webkit-transition: background-color .25s; /* Safari */
  transition: background-color .25s;
}

.buttonRemoveTimer {
  background-image: url('../resources/void.png');
}

.buttonAddTimer {
  background-image: url('../resources/plus.svg');
  display: table;
  margin: 0 auto;
}

.buttonStart {
  background-image: url('../resources/ic_play_arrow_black_24px.svg');
}

.buttonPause {
  background-image: url('../resources/ic_pause_black_24px.svg');
}

.buttonReset {
  background-image: url('../resources/restart.svg');
}

/****** Timer Styles: ******/
.timer {
  border-radius: .5em;
  background: linear-gradient(transparent 5%, rgba(255, 255, 255, .35) 15%, rgba(255, 255, 255, .35) 85%, transparent 95%);
  margin: 1em;
  padding: 1em;
}

.durationControl {
  display: flex;
  justify-content: center;
}

.durationControl span {
  margin: .5em;
}

/****** Timer Status Styles: ******/
.timerStatus {
  text-align: center;
}

